# Cpp-Utilities

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  Utilities.sln  codecov.yml
CI/AppVeyor/: SetEnviroment.bat  enable-worker-remote-access.ps1
CI/Travis/: Build.sh  GTest.sh  Install-dependencies.sh  InstallCompilers.sh  InstallDependencies.sh
CMake/: CodeCoverage.cmake
CMakeModules/: CppCheck.cmake
Common/: Asynchronize.h  CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  FixedFunction.h  IteratorAdaptor.h  Test.cpp  TestUtilities.h  ZipIterartor.h  ZipIterator.h
ThreadPool/: AsioThreadPool.h  CMakeLists.txt  MultiQueueThreadPool.h  PplThreadPool.h  SingleQueueThreadPool.h  TaskQueue.h  Test.cpp  TestUtilities.h  ThreadPool.vcxproj  ThreadPool.vcxproj.filters  WorkStealingQueueThreadPool.h  WorkStealingThreadPool.h  main.cpp
